package com.lani.connector;

import java.io.IOException;
import java.io.OutputStream;

/**
 * Title: HttpServer
 * Description:
 *
 * @Author 2Executioner
 * @Email 1205878539@qq.com
 * @Date 2022-03-17 20:57
 */
public class ResponseStream extends OutputStream {
    @Override
    public void write(int b) throws IOException {

    }
}
